# RAG-Assistant

./: .gitignore  README.md  products.db  pyproject.toml
rag_assistant/app/: app.py
rag_assistant/database/: product_database.py
rag_assistant/llm/: agent.py  chat.py
rag_assistant/retrieval/: embedding.py  vector_index.py
test/: test_chat.py  test_embedding.py  test_product_database.py  test_vector_index.py
