[project]
name = "rag-assistant"
version = "0.1.0"
description = "Prototype of RAG E-Commerce AI Assistant"
authors = [
    {name = "pavelyanu",email = "pyanushonak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "rag_assistant"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
